[package]
name = "pengy_agent"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "pengy"
path = "src/bin/cli/main.rs"

[dependencies]
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros"] }
ratatui = "0.29"
crossterm = "0.28"
tui-textarea = "0.4"
textwrap = "0.16"
pdf-extract = "0.7"
screenshots = "0.7"
base64 = "0.22"
image = "0.25"

[dev-dependencies]
tempfile = "3.10"
